--- a/IntegratedPresenter/MainWindow.xaml
+++ b/IntegratedPresenter/MainWindow.xaml
@@ -1129,6 +1129,24 @@
                                                         </Button.Template>
                                                     </Button>
 
+                                                    <Button Focusable="false" Name="BtnPattern" Click="ClickDVEMode" Foreground="White" Background="Red" Cursor="Hand">
+                                                        <Button.Content>DVE (PIP)</Button.Content>
+                                                        <Button.Template>
+                                                            <ControlTemplate>
+                                                                <Border Width="70" Height="30" Name="Border" Background="#1d1d1d" BorderBrush="{TemplateBinding Foreground}" Margin="3" BorderThickness="1">
+                                                                    <ContentControl VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="{Binding Path=Foreground, RelativeSource={RelativeSource AncestorType={x:Type Button}}}" Content="{Binding Path=Content, RelativeSource={RelativeSource AncestorType={x:Type Button}}}"></ContentControl>
+                                                                </Border>
+                                                                <ControlTemplate.Triggers>
+                                                                    <Trigger Property="IsMouseOver" Value="True">
+                                                                        <Setter Property="Cursor" Value="{Binding Path=Cursor, RelativeSource={RelativeSource AncestorType={x:Type Button}}}" TargetName="Border"></Setter>
+                                                                        <Setter Property="BorderBrush" Value="{Binding Path=Background, RelativeSource={RelativeSource AncestorType={x:Type Button}}}" TargetName="Border"></Setter>
+                                                                    </Trigger>
+                                                                </ControlTemplate.Triggers>
+                                                            </ControlTemplate>
+                                                        </Button.Template>
+                                                    </Button>
+
+
                                                     <Button Focusable="False" Name="BtnChroma" Click="ClickChromaMode" Foreground="White" Background="red" Cursor="Hand">
                                                         <Button.Content>CHROMA</Button.Content>
                                                         <Button.Template>
