--- a/IntegratedPresenter/ViewModels/PATTERNKeyControl.xaml
+++ b/IntegratedPresenter/ViewModels/PATTERNKeyControl.xaml
@@ -7,7 +7,7 @@
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-        <Grid Background="#272727">
+        <Grid Background="#2f2f30">
             <Grid.RowDefinitions>
                 <RowDefinition></RowDefinition>
                 <RowDefinition></RowDefinition>
