--- a/IntegratedPresenter/ViewModels/PilotCamPreview.xaml
+++ b/IntegratedPresenter/ViewModels/PilotCamPreview.xaml
@@ -22,7 +22,7 @@
                 <TextBlock Grid.Row="0" FontSize="30" Name="tbName" Foreground="#a0a0a0" VerticalAlignment="Center" HorizontalAlignment="Center">CAM NAME</TextBlock>
                 <Viewbox Grid.Row="1">
 
-                    <TextBlock Name="tbOnAir" Foreground="Red" FontWeight="Bold">ON AIR</TextBlock>
+                    <TextBlock Name="tbOnAir" Foreground="white" FontWeight="Bold">ON AIR</TextBlock>
 
                 </Viewbox>
                 <Viewbox Grid.Row="2" Margin="5,0,5,0">
@@ -32,22 +32,57 @@
                 <TextBlock Grid.Row="4" FontSize="40" Name="tbStatus" Foreground="Orange" VerticalAlignment="Center" HorizontalAlignment="Center">STATUS</TextBlock>
 
                 <Grid Grid.Row="5">
+                    <StackPanel Orientation="Horizontal" HorizontalAlignment="Center">
+                        <Button Name="btnReFire" Focusable="False" Click="ClickReRun" IsTabStop="False">
+                            <Button.Template>
+                                <ControlTemplate>
+                                    <!--<Border Padding="10" Name="Border" Background="#1d1d1d" BorderBrush="WhiteSmoke" Margin="3" BorderThickness="1">-->
+                                    <ContentControl Name="tgt" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="white" FontSize="35">Re-Run</ContentControl>
+                                    <!--</Border>-->
+                                    <ControlTemplate.Triggers>
+                                        <Trigger Property="IsMouseOver" Value="True">
+                                            <Setter Property="Cursor" Value="Hand"></Setter>
+                                            <Setter Property="Foreground" Value="Orange" TargetName="tgt"></Setter>
+                                        </Trigger>
+                                    </ControlTemplate.Triggers>
+                                </ControlTemplate>
+                            </Button.Template>
+                        </Button>
 
-                    <Button Name="btnReFire" Focusable="False" Click="ClickReRun" IsTabStop="False">
-                        <Button.Template>
-                            <ControlTemplate>
-                                <!--<Border Padding="10" Name="Border" Background="#1d1d1d" BorderBrush="WhiteSmoke" Margin="3" BorderThickness="1">-->
-                                <ContentControl Name="tgt" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="#7f7f7f" FontSize="35">Re-Run</ContentControl>
-                                <!--</Border>-->
-                                <ControlTemplate.Triggers>
-                                    <Trigger Property="IsMouseOver" Value="True">
-                                        <Setter Property="Cursor" Value="Hand"></Setter>
-                                        <Setter Property="Foreground" Value="Orange" TargetName="tgt"></Setter>
-                                    </Trigger>
-                                </ControlTemplate.Triggers>
-                            </ControlTemplate>
-                        </Button.Template>
-                    </Button>
+                        <Button Name="btnZIN" Focusable="False" Click="ClickZIn" IsTabStop="False" Margin="30,0,30,0">
+                            <Button.Template>
+                                <ControlTemplate>
+                                    <!--<Border Padding="10" Name="Border" Background="#1d1d1d" BorderBrush="WhiteSmoke" Margin="3" BorderThickness="1">-->
+                                    <ContentControl Name="tgt" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="white" FontSize="35">Z+</ContentControl>
+                                    <!--</Border>-->
+                                    <ControlTemplate.Triggers>
+                                        <Trigger Property="IsMouseOver" Value="True">
+                                            <Setter Property="Cursor" Value="Hand"></Setter>
+                                            <Setter Property="Foreground" Value="Orange" TargetName="tgt"></Setter>
+                                        </Trigger>
+                                    </ControlTemplate.Triggers>
+                                </ControlTemplate>
+                            </Button.Template>
+                        </Button>
+
+                        <Button Name="btnZOUT" Focusable="False" Click="ClickZOut" IsTabStop="False">
+                            <Button.Template>
+                                <ControlTemplate>
+                                    <!--<Border Padding="10" Name="Border" Background="#1d1d1d" BorderBrush="WhiteSmoke" Margin="3" BorderThickness="1">-->
+                                    <ContentControl Name="tgt" VerticalAlignment="Center" HorizontalAlignment="Center" Foreground="white" FontSize="35">Z-</ContentControl>
+                                    <!--</Border>-->
+                                    <ControlTemplate.Triggers>
+                                        <Trigger Property="IsMouseOver" Value="True">
+                                            <Setter Property="Cursor" Value="Hand"></Setter>
+                                            <Setter Property="Foreground" Value="Orange" TargetName="tgt"></Setter>
+                                        </Trigger>
+                                    </ControlTemplate.Triggers>
+                                </ControlTemplate>
+                            </Button.Template>
+                        </Button>
+
+
+                    </StackPanel>
 
 
                 </Grid>
