--- a/UIControls/LayoutDesigner.xaml
+++ b/UIControls/LayoutDesigner.xaml
@@ -7,7 +7,7 @@
         mc:Ignorable="d"
         Title="LayoutDesigner" Height="450" Width="800">
     <Window.Resources>
-        
+
     </Window.Resources>
     <Grid Background="#272727">
         <Grid>
@@ -43,8 +43,20 @@
                         <ColumnDefinition></ColumnDefinition>
                         <ColumnDefinition></ColumnDefinition>
                     </Grid.ColumnDefinitions>
-                    <Border BorderBrush="#373737" BorderThickness="3" Margin="10">
+                    <Border Name="editor_JSON" BorderBrush="#373737" BorderThickness="3" Margin="10">
                         <AvalonEdit:TextEditor Foreground="White" Background="#171717" Name="TbJson" FontFamily="cascadia" FontSize="13" TextChanged="SourceTextChanged" ShowLineNumbers="True" SyntaxHighlighting="JavaScript"></AvalonEdit:TextEditor>
+                    </Border>
+                    <Border Name="editor_HTML" BorderBrush="#373737" BorderThickness="3" Margin="10">
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition></RowDefinition>
+                                <RowDefinition></RowDefinition>
+                                <RowDefinition></RowDefinition>
+                            </Grid.RowDefinitions>
+                            <AvalonEdit:TextEditor Grid.Row="0" Foreground="White" Background="#171717" Name="TbHtml" FontFamily="cascadia" FontSize="13" TextChanged="SourceTextChanged" ShowLineNumbers="True" SyntaxHighlighting="JavaScript"></AvalonEdit:TextEditor>
+                            <AvalonEdit:TextEditor Grid.Row="1" Foreground="White" Background="#171717" Name="TbKey" FontFamily="cascadia" FontSize="13" TextChanged="SourceTextChanged" ShowLineNumbers="True" SyntaxHighlighting="JavaScript"></AvalonEdit:TextEditor>
+                            <AvalonEdit:TextEditor Grid.Row="2" Foreground="White" Background="#171717" Name="TbCSS" FontFamily="cascadia" FontSize="13" TextChanged="SourceTextChanged" ShowLineNumbers="True" SyntaxHighlighting="JavaScript"></AvalonEdit:TextEditor>
+                        </Grid>
                     </Border>
                     <ScrollViewer Grid.Column="1">
                         <StackPanel>
