- option to force run slide on pres load - lsb parser : angus dei is communion hymn, anthem sub panel fixes, sub panel fixes - bible class wizard

--- a/SlideCreater/MainWindow.xaml
+++ b/SlideCreater/MainWindow.xaml
@@ -149,6 +149,7 @@
             </MenuItem>
             <MenuItem Header="Tools">
                 <MenuItem Foreground="Black" Click="Click_GenerateArbitraryReading_Complex" Header="Generate Arbitrary Reading (Complex)"></MenuItem>
+                <MenuItem Foreground="Black" Click="Click_BibleClassWizzard" Header="Bible Class Wizzard"></MenuItem>
             </MenuItem>
             <MenuItem Header="Help">
                 <MenuItem  Foreground="Black" Header="Commands" Click="ClickHelpCommands">
