--- a/IntegratedPresenter/MainWindow.xaml
+++ b/IntegratedPresenter/MainWindow.xaml
@@ -41,7 +41,6 @@
                     <MenuItem Name="cbShowEffectiveCurrent" Header="Preview Effective Current" IsTabStop="False" IsCheckable="True" IsChecked="True" Click="ClickToggleShowEffectiveCurrentPreview" Focusable="False"></MenuItem>
                     <MenuItem Name="cbShowAutomationPreviews" Header="Preview Automation Steps" IsTabStop="False" IsCheckable="True" IsChecked="True" Click="ClickToggleShowAutomationPreviews" Focusable="False"></MenuItem>
                     <MenuItem Name="cbShowCurrentVideoCountdownTimer" Header="Video Countdown Timer (Current)" IsTabStop="False" IsCheckable="True" IsChecked="True" Click="ClickToggleShowCurrentVideoCountdownTimer" Focusable="False"></MenuItem>
-                    <MenuItem Name="cbAdvancedPresentation" Header="Advanced Presentation [Q]" IsTabStop="False" IsCheckable="True" IsChecked="False" Click="ClickViewAdvancedPresentation" Focusable="False"></MenuItem>
                     <MenuItem Header="Audio Player [A]" IsTabStop="False" Click="ClickViewAudioPlayer" Focusable="False"></MenuItem>
                     <MenuItem Name="cbAdvancedPIP" Header="Advanced PIP [P]" IsTabStop="False" IsCheckable="True" IsChecked="False" Click="ClickViewAdvancedPIP" Focusable="False"></MenuItem>
                     <MenuItem Name="cbAdvancedPIPMovement" Header="Advanced PIP Location [L]" IsTabStop="False" Click="ClickViewAdvancedFlyKeySettings" Focusable="False"></MenuItem>
@@ -83,9 +82,8 @@
 
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="2*"></ColumnDefinition>
-                <ColumnDefinition Width="4*"></ColumnDefinition>
-                <ColumnDefinition Width="*" Name="gcAdvancedPresentation"></ColumnDefinition>
+                <ColumnDefinition Width="343*"></ColumnDefinition>
+                <ColumnDefinition Width="686*"></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <Grid Grid.Column="0">
                 <Grid>
@@ -2284,7 +2282,7 @@
 
                 </Grid>
             </Grid>
-            <Grid Grid.Column="1">
+            <Grid Grid.Column="1" Margin="0,0,1,0">
                 <Grid>
                     <Grid.RowDefinitions>
                         <RowDefinition Height="*"></RowDefinition>
@@ -2381,16 +2379,6 @@
                         </Viewbox>
                     </Grid>
                 </Grid>
-            </Grid>
-            <Grid Grid.Column="2">
-                <Viewbox Stretch="Uniform">
-                    <StackPanel>
-                        <local:SlidePoolSource IsTabStop="False" x:Name="SlidePoolSource0" TakeSlidePoolSource="ClickTakeSP0" SourceIDNum="1" Grid.Row="0"></local:SlidePoolSource>
-                        <local:SlidePoolSource IsTabStop="False" x:Name="SlidePoolSource1" TakeSlidePoolSource="ClickTakeSP1" SourceIDNum="2" Grid.Row="1"></local:SlidePoolSource>
-                        <local:SlidePoolSource IsTabStop="False" x:Name="SlidePoolSource2" TakeSlidePoolSource="ClickTakeSP2" SourceIDNum="3"  Grid.Row="2"></local:SlidePoolSource>
-                        <local:SlidePoolSource IsTabStop="False" x:Name="SlidePoolSource3" TakeSlidePoolSource="ClickTakeSP3" SourceIDNum="4" Grid.Row="3"></local:SlidePoolSource>
-                    </StackPanel>
-                </Viewbox>
             </Grid>
         </Grid>
 
